# bestbuyapi

./: README.md  pyproject.toml  requirements-dev.txt  tox.ini
bestbuyapi/: __init__.py
bestbuyapi/api/: base.py  bulk.py  categories.py  products.py  stores.py
tests/: conftest.py  test_api_basics.py  test_bulk_api.py  test_categories_api.py  test_products_api.py  test_stores_api.py
