[project]
name = "bestbuyapi"
version = "3.0.0"
description = "Python Wrapper over Best Buy's REST API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "lv10", email = "luis@lv10.me" }]
requires-python = ">=3.7"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.23.0",
]

[project.urls]
Repository = "https://github.com/lv10/bestbuyapi"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
